css/style.css
:root{
    --primary-color: lightskyblue;
    --secondary-color: white;
    --primary-font-color: black;
    --secondary-font-color: #495057;

}
/*.background_main{*/
/*    background-color: var(--primary-color);*/
/*}*/
body{
    background-color: var(--primary-color);
    color: var(--primary-font-color);
}
.converter-header{
    background-color: var(--secondary-color);
}
.form-control, .custom-select{
    background-color: var(--secondary-color);
    color: var(--secondary-font-color);
}
#savedConversions{
    color: var(--secondary-font-color);
}
hr{
    background-color: var(--secondary-color);
}

.header{
    padding: .5rem 1rem;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    box-shadow: 0 3px 7px -3px rgba(0,0,0,.15);
    height: 4.8rem;
}
.navbar-brand{
    text-shadow: rgba(0,0,0,.15) 3px 3px 3px;
    margin-right: auto;
}

